docs: add rental store docs
